--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "debug": "^3.1.0",
+    "dotenv": "^10.0.0",
     "express": "^4.16.2",
+    "fs": "^0.0.1-security",
     "moment": "^2.29.1",
     "mongoose": "^5.13.3",
     "morgan": "^1.9.0",
