--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,4 +23,4 @@ jobs:
     - name: Build Docker Image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
     - name: Docker Push
-      run: docker push ${{secrets.DOCKER_USER}}/cbtracker:latest
+      run: docker push ${{secrets.DOCKER_USER}}/cbtracker
