--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,10 @@ jobs:
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-    - name: Build Docker Image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
-    - name: Docker Push
-      run: docker push ${{secrets.DOCKER_USER}}/cbtracker
+        
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: ${{secrets.DOCKER_USER}}/cbtracker:latest
