--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "update": "node scripts/updater.js",
     "test": "ng test"
   },
   "private": true,
@@ -18,22 +19,46 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "assert": "^2.0.0",
+    "axios": "^1.3.5",
+    "bignumber.js": "^9.1.1",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "ethereum-multicall": "^2.16.1",
+    "ethers": "5.7.1",
+    "flowbite": "^1.6.4",
+    "https-browserify": "^1.0.0",
+    "node-fetch": "2.6.1",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
     "rxjs": "~7.5.0",
+    "seedrandom": "^3.0.5",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "sweetalert2": "^11.7.3",
     "tslib": "^2.3.0",
+    "tw-elements": "^1.0.0-beta1",
+    "url": "^0.11.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^13.1.0",
     "@angular-devkit/build-angular": "~13.3.9",
     "@angular/cli": "~13.3.9",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/fs-extra": "^11.0.1",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/seedrandom": "^3.0.5",
+    "autoprefixer": "^10.4.14",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1",
     "typescript": "~4.6.2"
   }
 }
