--- a/package.json
+++ b/package.json
@@ -60,5 +60,8 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1",
     "typescript": "~4.6.2"
+  },
+  "engines": {
+    "node": ">=16.18.1"
   }
 }
