--- a/package.json
+++ b/package.json
@@ -62,8 +62,7 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1",
-    "typescript": "~4.6.2",
-    "wrangler": "^2.15.1"
+    "typescript": "~4.6.2"
   },
   "engines": {
     "node": ">=16.18.1"
