--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,8 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              "src/sw.js"
+              "src/assets"
+
             ],
             "styles": [
               "src/styles.css"
