--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "ethers": "6.2.0",
     "flowbite": "^1.6.4",
     "https-browserify": "^1.0.0",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "rxjs": "~7.5.0",
