--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "seedrandom": "^3.0.5",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "sweetalert2": "^11.7.3",
+    "sweetalert2": "11.4.8",
     "tslib": "^2.3.0",
     "tw-elements": "^1.0.0-beta1",
     "url": "^0.11.0",
