--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "ngx-paypal": "9.0.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "rxjs": "~7.5.0",
