test smarty ads

--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/ads.txt"
+              "src/ads.txt",
+              "src/prebid.js"
             ],
             "styles": [
               "src/styles.css"
