--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.3.5",
     "bignumber.js": "^9.1.1",
     "buffer": "^6.0.3",
+    "cookieconsent": "^3.1.1",
     "crypto-browserify": "^3.12.0",
     "ethereum-multicall": "^2.16.1",
     "ethers": "6.2.0",
