--- a/.github/workflows/pages-deployment.yaml
+++ b/.github/workflows/pages-deployment.yaml
@@ -26,6 +26,7 @@ jobs:
         projectName: cbtracker
         directory: dist
         gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+        branch: main
 permissions:
   id-token: write
   checks: write
